# gif-4104-tp5

./: CMakeLists.txt  CMakeLists.txt.orig  README.md  oth.cpp  test.cpp  test.cpp~
ai/: AlphaBeta.cpp  AlphaBeta.h  Evaluator.cpp  Evaluator.h
util/: Game.cpp  Game.cpp.orig  Game.cpp~  Game.h  Game.h~  Move.cpp  Move.h  Player.cpp  Player.h  Square.cpp  Square.h
